--- a/data/ARPAbet_mapping.json
+++ b/data/ARPAbet_mapping.json
@@ -9,7 +9,7 @@
     ],
     "vowel_attributes": [
         "long"     , "short"    , "low"      , "mid"      , "high"     ,
-        "front"    , "central"  , "back"     , "round"    , "diphthong", "voiced"
+        "front"    , "central"  , "back"     , "round"    , "diphthong", "voiced", "sil"
     ],
     "phoneme_attribute_map": {
         "b": ["labial", "bilabial", "anterior", "stop", "obstruent", "voiced"],
@@ -105,6 +105,7 @@
         "ay": ["long", "low", "central", "diphthong", "voiced"],
         "ey": ["long", "mid", "front", "diphthong", "voiced"],
         "ow": ["long", "mid", "central", "round", "diphthong", "voiced"],
-        "oy": ["long", "mid", "back", "round", "diphthong", "voiced"]
+        "oy": ["long", "mid", "back", "round", "diphthong", "voiced"],
+        "sil": ["sil"]
     }
 }
