--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,42 @@
-# Mac OS system files
-.DS_Store
-._*
+# Mac OS
 Icon?
+.DS_Store
+.AppleDouble
+.LSOverride
+.Spotlight-V100
+.Trashes
+._*
+.fseventsd
 
-# Python files
-*.pyc
+# Byte-compiled / optimized / DLL files
 __pycache__/
-*.egg-info/
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
+.Python
 build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
 # Virtual environment
 venv/
 
 # IDE
 .vscode/
+
+# Pytest
+.cache/
+*.pytest_cache
